// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pipe 1`] = `
Object {
  "d": Object {
    "type": "FOO",
    "value": "f1--s-foo",
  },
}
`;

exports[`pipe 2`] = `
Object {
  "d": Object {
    "type": "BAR",
    "value": "f1--s-bar",
  },
}
`;

exports[`pipe 3`] = `
Object {
  "d": Object {
    "type": "FOO",
    "value": "f2--s-foo",
  },
}
`;

exports[`pipe 4`] = `
Object {
  "d": Object {
    "type": "BAR",
    "value": "f1--s-bar",
  },
}
`;

exports[`pipe 5`] = `
Object {
  "d": Object {
    "type": "FLUSH",
  },
}
`;

exports[`pipe 6`] = `
Object {
  "d": Object {
    "type": "BAR",
    "value": "f1--s-bar",
  },
}
`;

exports[`pipe 7`] = `
Object {
  "d": Object {
    "type": "FLUSH",
  },
}
`;
